--- a/doc/sprava.tex
+++ b/doc/sprava.tex
@@ -18,15 +18,6 @@
 \usepackage[top=3.5cm, left=2.5cm, text={17cm, 24cm}, ignorefoot]{geometry}
 
 \setcounter{secnumdepth}{4}
-\usepackage{pdflscape}
-\usepackage{afterpage}
-\usepackage{capt-of}% or use the larger `caption` package
-\usepackage{amsmath}
-\usepackage{rotating}
-\newcommand{\BigO}[1]{\ensuremath{O\bigl(#1\bigr)}}
-\newcommand{\ttlcb}{\texttt{\char 123}}
-\newcommand{\ttrcb}{\texttt{\char 125}}
-\newcommand{\ttsc}{\texttt{\char 59}}
 
 \begin{document}
 
@@ -101,21 +92,23 @@ výrobného podniku v podmienkach rôzneho vyťaženia, pridávania jednotlivýc
 obslužních liniek.
 TODO: scim experimentujeme. 
 
-Cieľom experimentov je demonštrovanie možných optimalizácií na zadanom modely. Konkrétne
-nájdenie optimálnejšej konfigurácie vzhľadom na počet vyrobených kusov základných 
-dosiek ročne pri čo najmenšej veľkosti a cene výslednej výrobnej linky.
+Cieľom experimentov je demonštrovanie možných optimalizácií na zadanom modely.
+Konkrétne nájdenie optimálnejšej konfigurácie vzhľadom na počet vyrobených
+kusov základných dosiek ročne pri čo najmenšej veľkosti a cene výslednej 
+výrobnej linky.
 
 Pre spracovanie modelu je nutné naštudovať a pochopiť samotný proces výroby
 základnej dosky(ďalej len výroby). Vyhľadať a spracovať informácie týkajúce sa 
 technologií ktoré sú použité pri výrobe. Získať technické špecifikácie zariadení,
-ktoré sa podieľajú na výrobe. Prispôsobenie modelovaného systému tak,
-aby čo najviac odpovedal reálnemu systému výroby. Následne spracovať tieto údaje,
-navrhnúť experimenty pré vytvorenie optimálnejších riešení výroby. 
+ktoré sa podieľajú na výrobe.
+Prispôsobenie modelovaného systému tak, aby čo najviac odpovedal reálnemu
+systému výroby. Následne spracovať tieto údaje, navrhnúť experimenty pré 
+vytvorenie optimálnejších riešení výroby. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Autori a zdroje faktov}
-Na projekte sa podieľali študenti VUT FIT Marek Milkovič a Lukáš Vrabec. Informácie
-a odborné fakty boli čerpané z internetu, odborných článkov a výročných
+Na projekte sa podieľali študenti VUT FIT Marek Milkovič a Lukáš Vrabec.
+Informácie a odborné fakty boli čerpané z internetu, odborných článkov a výročných
 správ spoločností GIGA-BYTE Technology Co. Ltd. a ASUSTeK Computer Inc.
 Všetky zdroje sú uverejnené na konci tohto dokumentu.
 
