[Doc] Fix couple bugs in doc

--- a/doc/sprava.tex
+++ b/doc/sprava.tex
@@ -92,7 +92,7 @@ obslužních liniek.
 TODO: scim experimentujeme. 
 
 Cieľom experimentov je demonštrovanie možných optimalizácií na zadanom modely. Kon\-kré\-tne
-Konkrétne nájdenie optimálnejšej konfigurácie vzhľadom na počet vyrobených
+nájdenie optimálnejšej konfigurácie vzhľadom na počet vyrobených
 kusov základných dosiek ročne pri čo najmenšej veľkosti a cene výslednej 
 výrobnej linky.
 
@@ -100,7 +100,7 @@ Pre spracovanie modelu je nutné naštudovať a pochopiť samotný proces výrob
 základnej dosky(ďalej len výroby). Vyhľadať a spracovať informácie týkajúce sa 
 technologií ktoré sú použité pri výrobe. Získať technické špecifikácie zariadení,
 ktoré sa podieľajú na výrobe. Pri\-spô\-so\-be\-nie modelovaného systému tak,
-Prispôsobenie modelovaného systému tak, aby čo najviac odpovedal reálnemu
+aby čo najviac odpovedal reálnemu
 systému výroby. Následne spracovať tieto údaje, navrhnúť experimenty pré 
 vytvorenie optimálnejších riešení výroby. 
 
@@ -142,7 +142,7 @@ chýb je PCB nutné manuálne opraviť. Po oprave je nutné AOI zopakovať. Tent
 
 Následne je PCB umiestnená na DIP (\textit{angl. Dual in-line package})
 linku ktorú predstavuje posuvný pás na ktorom sú manuálne umiesňované 
-DIP konektory (DIMM,PCI-Express atď.). DIP konetkory sú upevnené v špeciálnej
+DIP konektory (DIMM, PCI-Express atď.). DIP konetkory sú upevnené v špeciálnej
 peci (spájkovanie vlnou).
 
 Proces výroby základnej dosky je hotový. Vykoná sa viacero manuálnych aj automatizovaných
